--- a/ux/public/index.html
+++ b/ux/public/index.html
@@ -39,13 +39,13 @@
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> -->
     
     <!-- Microsoft Clarity -->
-    <!-- <script type="text/javascript">
+    <script type="text/javascript">
       (function(c,l,a,r,i,t,y){
           c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
           t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
           y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
       })(window, document, "clarity", "script", "c9fw9ipf3b");
-    </script> -->
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
